--- a/github_plotly_dashboard.ipynb
+++ b/github_plotly_dashboard.ipynb
@@ -445,105 +445,120 @@
     }
    ],
    "source": [
-    "# skeleton Dash app to be completed in this lab, downloaded from:\n",
-    "# https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBM-DS0321EN-SkillsNetwork/labs/module_3/spacex_dash_app.py\n",
-    "# redundant lines commented out\n",
-    "\n",
     "# Import required libraries\n",
-    "# import pandas as pd\n",
-    "# import dash\n",
-    "# import dash_html_components as html\n",
-    "# import dash_core_components as dcc\n",
-    "# from dash.dependencies import Input, Output\n",
+    "import pandas as pd\n",
+    "import dash\n",
+    "# import dash_html_components as html  # deprecated\n",
+    "from dash import html\n",
+    "# import dash_core_components as dcc  # deprecated\n",
+    "from dash import dcc\n",
+    "from dash.dependencies import Input, Output\n",
     "import plotly.express as px\n",
     "\n",
     "# Read the airline data into pandas dataframe\n",
-    "# spacex_df = pd.read_csv(\"spacex_launch_dash.csv\")\n",
+    "spacex_df = pd.read_csv(\"spacex_launch_dash.csv\")\n",
     "max_payload = spacex_df['Payload Mass (kg)'].max()\n",
     "min_payload = spacex_df['Payload Mass (kg)'].min()\n",
     "\n",
     "# Create a dash application\n",
-    "# app = dash.Dash(__name__) # commented out as we are using JupyterDash instead of dash.Dash\n",
-    "app = JupyterDash(__name__)\n",
+    "app = dash.Dash(__name__)\n",
     "\n",
     "# Create an app layout\n",
-    "app.layout = html.Div(children=[html.H1('SpaceX Launch Records Dashboard',\n",
-    "                                        style={'textAlign': 'center', 'color': '#503D36',\n",
-    "                                               'font-size': 40}),\n",
-    "                                # TASK 1: Add a dropdown list to enable Launch Site selection\n",
-    "                                # The default select value is for ALL sites\n",
-    "                                # dcc.Dropdown(id='site-dropdown',...)\n",
-    "                                dcc.Dropdown(id='site-dropdown',\n",
-    "                                             options=[\n",
-    "                                                     {'label': 'All Sites', 'value': 'ALL'},\n",
-    "                                                     {'label': 'CCAFS LC-40', 'value': 'CCAFS LC-40'},\n",
-    "                                                     {'label': 'VAFB SLC-4E', 'value': 'VAFB SLC-4E'},\n",
-    "                                                     {'label': 'KSC LC-39A', 'value': 'KSC LC-39A'},\n",
-    "                                                     {'label': 'CCAFS SLC-40', 'value': 'CCAFS SLC-40'}\n",
-    "                                                     ],\n",
-    "                                             value='ALL',\n",
-    "                                             placeholder='Select a Launch Site here',\n",
-    "                                             searchable=True\n",
-    "                                             # style={'width':'80%','padding':'3px','font-size':'20px','text-align-last':'center'}\n",
-    "                                             ),\n",
-    "                                html.Br(),\n",
+    "app.layout = html.Div(children=[\n",
+    "    html.H1('SpaceX Launch Records Dashboard',\n",
+    "            style={'textAlign': 'center', 'color': '#503D36', 'font-size': 40}),\n",
     "\n",
-    "                                # TASK 2: Add a pie chart to show the total successful launches count for all sites\n",
-    "                                # If a specific launch site was selected, show the Success vs. Failed counts for the site\n",
-    "                                html.Div(dcc.Graph(id='success-pie-chart')),\n",
-    "                                html.Br(),\n",
+    "    # TASK 1: Add a dropdown list to enable Launch Site selection\n",
+    "    # The default select value is for ALL sites\n",
+    "    # dcc.Dropdown(id='site-dropdown',...)\n",
+    "    dcc.Dropdown(\n",
+    "        id='site-dropdown',\n",
+    "        options=[\n",
+    "            {'label': 'All Sites', 'value': 'ALL'},\n",
+    "            {'label': 'Cape Canaveral Launch Complex 40 (CAFS LC-40)', 'value': 'CCAFS LC-40'},\n",
+    "            {'label': 'Cape Canaveral Space Launch Complex 40 (CCAFS SLC-40)', 'value': 'CCAFS SLC-40'},\n",
+    "            {'label': 'Kennedy Space Center Launch Complex 39A (KSC LC-39A)', 'value': 'KSC LC-39A'},\n",
+    "            {'label': 'Vandenberg Air Force Base Space Launch Complex (VAFB SLC-4E)', 'value': 'VAFB SLC-4E'}\n",
+    "        ],\n",
+    "        value='ALL',\n",
+    "        placeholder=\"Select a Launch Site\",\n",
+    "        searchable=True\n",
+    "    ),\n",
     "\n",
-    "                                html.P(\"Payload range (Kg):\"),\n",
-    "                                # TASK 3: Add a slider to select payload range\n",
-    "                                #dcc.RangeSlider(id='payload-slider',...)\n",
-    "                                dcc.RangeSlider(id='payload-slider',\n",
-    "                                                min=0,\n",
-    "                                                max=10000,\n",
-    "                                                step=1000,\n",
-    "                                                value=[min_payload, max_payload]\n",
-    "                                                ),\n",
+    "    html.Br(),\n",
     "\n",
-    "                                # TASK 4: Add a scatter chart to show the correlation between payload and launch success\n",
-    "                                html.Div(dcc.Graph(id='success-payload-scatter-chart')),\n",
-    "                                ])\n",
+    "    # TASK 2: Add a pie chart to show the total successful launches count for all sites\n",
+    "    # If a specific launch site was selected, show the Success vs. Failed counts for the site\n",
+    "    html.Div(dcc.Graph(id='success-pie-chart')),\n",
+    "    html.Br(),\n",
+    "\n",
+    "    html.P(\"Payload range (Kg):\"),\n",
+    "    # TASK 3: Add a slider to select payload range\n",
+    "    # dcc.RangeSlider(id='payload-slider',...)\n",
+    "\n",
+    "    dcc.RangeSlider(id='payload-slider',\n",
+    "                    min=0, max=10000, step=1000,\n",
+    "                    # marks={0: '0', 100: '100'},\n",
+    "                    value=[min_payload, max_payload]),\n",
+    "\n",
+    "    # TASK 4: Add a scatter chart to show the correlation between payload and launch success\n",
+    "    html.Div(dcc.Graph(id='success-payload-scatter-chart')),\n",
+    "    ])\n",
+    "\n",
     "\n",
     "# TASK 2:\n",
     "# Add a callback function for `site-dropdown` as input, `success-pie-chart` as output\n",
+    "# Place to add @app.callback Decorator\n",
     "@app.callback(Output(component_id='success-pie-chart', component_property='figure'),\n",
     "              Input(component_id='site-dropdown', component_property='value'))\n",
     "def get_pie_chart(entered_site):\n",
-    "    filtered_df = spacex_df\n",
+    "    filtered_df = spacex_df.groupby(['Launch Site'], as_index=False).mean()\n",
     "    if entered_site == 'ALL':\n",
-    "        fig = px.pie(filtered_df, values='class', \n",
-    "        names='Launch Site', \n",
-    "        title='Success Count for all launch sites')\n",
-    "        return fig\n",
-    "    else:\n",
-    "        # return the outcomes piechart for a selected site\n",
-    "        filtered_df=spacex_df[spacex_df['Launch Site']== entered_site]\n",
-    "        filtered_df=filtered_df.groupby(['Launch Site','class']).size().reset_index(name='class count')\n",
-    "        fig=px.pie(filtered_df,values='class count',names='class',title=f\"Total Success Launches for site {entered_site}\")\n",
-    "        return fig\n",
+    "        return px.pie(filtered_df, values='class', names='Launch Site', title='Launch Success Rate For All Sites')\n",
+    "    # return the outcomes in pie chart for a selected site\n",
+    "    filtered_df = spacex_df[spacex_df['Launch Site'] == entered_site]\n",
+    "    filtered_df['outcome'] = filtered_df['class'].apply(lambda x: 'Success' if (x == 1) else 'Failure')\n",
+    "    filtered_df['counts'] = 1\n",
+    "    return px.pie(filtered_df, values='counts', names='outcome', title='Launch Success Rate For ' + entered_site)\n",
+    "\n",
     "\n",
     "# TASK 4:\n",
     "# Add a callback function for `site-dropdown` and `payload-slider` as inputs, `success-payload-scatter-chart` as output\n",
-    "@app.callback(Output(component_id='success-payload-scatter-chart',component_property='figure'),\n",
-    "                [Input(component_id='site-dropdown',component_property='value'),\n",
-    "                Input(component_id='payload-slider',component_property='value')])\n",
-    "def scatter(entered_site,payload):\n",
-    "    filtered_df = spacex_df[spacex_df['Payload Mass (kg)'].between(payload[0],payload[1])]\n",
-    "    # thought reusing filtered_df may cause issues, but tried it out of curiosity and it seems to be working fine\n",
-    "    \n",
-    "    if entered_site=='ALL':\n",
-    "        fig=px.scatter(filtered_df,x='Payload Mass (kg)',y='class',color='Booster Version Category',title='Success count on Payload mass for all sites')\n",
-    "        return fig\n",
-    "    else:\n",
-    "        fig=px.scatter(filtered_df[filtered_df['Launch Site']==entered_site],x='Payload Mass (kg)',y='class',color='Booster Version Category',title=f\"Success count on Payload mass for site {entered_site}\")\n",
-    "        return fig\n",
+    "@app.callback(Output(component_id='success-payload-scatter-chart', component_property='figure'),\n",
+    "              [Input(component_id='site-dropdown', component_property='value'),\n",
+    "               Input(component_id=\"payload-slider\", component_property=\"value\")])\n",
+    "def get_scatter_chart(entered_site, slider):\n",
+    "    filtered_df = spacex_df[\n",
+    "        (slider[0] <= spacex_df['Payload Mass (kg)']) & (spacex_df['Payload Mass (kg)'] <= slider[1])\n",
+    "    ]\n",
+    "    if entered_site == 'ALL':\n",
+    "        return px.scatter(filtered_df,\n",
+    "                          x='Payload Mass (kg)', y='class',\n",
+    "                          color='Booster Version Category',\n",
+    "                          title='Launch Success Rate For All Sites')\n",
+    "    # return the outcomes in pie chart for a selected site\n",
+    "    filtered_df = filtered_df[filtered_df['Launch Site'] == entered_site]\n",
+    "    filtered_df['outcome'] = filtered_df['class'].apply(lambda x: 'Success' if (x == 1) else 'Failure')\n",
+    "    filtered_df['counts'] = 1\n",
+    "    return px.scatter (filtered_df,\n",
+    "                       x='Payload Mass (kg)', y='class',\n",
+    "                       color='Booster Version Category',\n",
+    "                       title='Launch Success Rate For ' + entered_site)\n",
+    "\n",
     "\n",
     "# Run the app\n",
     "if __name__ == '__main__':\n",
-    "    app.run_server(mode='inline', host='localhost')"
+    "    app.run_server()\n",
+    "\n",
+    "# Finding Insights Visually\n",
+    "# Now with the dashboard completed, you should be able to use it to analyze SpaceX launch data, and answer the following questions:\n",
+    "#\n",
+    "# Which site has the largest successful launches? KSC LC-39A\n",
+    "# Which site has the highest launch success rate? KSC LC-39A (success rate 76.9%)\n",
+    "# Which payload range(s) has the highest launch success rate? 2000-4000\n",
+    "# Which payload range(s) has the lowest launch success rate? 6000-8000\n",
+    "# Which F9 Booster version (v1.0, v1.1, FT, B4, B5, etc.) has the highest\n",
+    "# launch success rate? B5 (only one successful start), apart from that FT (15 successes, 8 failures)"
    ]
   },
   {
